<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFBFB"
    android:id="@+id/neigbour_description"
    tools:context=".NeighbourDescriptionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imageViewContent"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_arrow"
                android:elevation="20dp"
                android:background="#00FF80AB"/>

            <ImageView
                android:id="@+id/neighbourIV"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/nameTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="40dp"
                android:text="Caroline"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/infosLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewContent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:elevation="8dp"
            android:orientation="vertical"
            android:translationY="4dp">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="Caroline"
                android:textColor="@color/lightBlack"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/lightGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_pin"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/placeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="4dp"
                    android:text="5 rue st pierre"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_phone"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/phoneNumberTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="4dp"
                    android:text="+33 6 31 43 56 67 89"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_web"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/linkTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="4dp"
                    android:text="facebook.com"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infosLL"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:elevation="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="À propos de moi"
                android:textColor="@color/lightBlack"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/lightGrey" />

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="dqjksbdkjqsbdqjks \n jsdkjqd \n"
                android:textColor="@color/grey"
                android:textSize="18sp" />

        </LinearLayout>


        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_above="@id/infosLL"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="-50dp"
            android:background="@drawable/circle_button"
            android:elevation="10dp"
            android:scaleType="center"
            android:src="@drawable/ic_star_border_white_24dp"
            app:tint="@color/yellow" />

    </RelativeLayout>


</ScrollView>